# sqlite-mcp

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  app.py  compose.yml  huey_start.sh  mcp_server.py  mcp_server2.py  pyproject.toml
mcps/: __init__.py  mcp_downloader.py  mcp_fs.py  mcp_server.py  mcp_server2.py  mcp_sql.py
modules/: __init__.py  agent_mod.py  agent_utils.py  embedder.py  logger.py  mcps.py  tools.py
modules/sqlite3/: __init__.py  sqlite_1.py  sqlite_2.py  sqlite_3.py
modules/system_prompts/: __init__.py  general_prompt.py  local_mcp_sqlit3_prompt.py
modules/tools/: __init__.py  background.py  datetime.py  embedding.py  file_management.py  weather.py
tasks/: __init__.py  tasks.py
templates/: index.html
