[project]
name = "sqlite-mcp"
version = "0.1.0"
description = "A SQLite MCP server for database operations"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiohttp>=3.11.13",
    "colorlog>=6.10.1",
    "dotenv>=0.9.9",
    "duckduckgo-mcp-server>=0.1.2",
    "fastapi>=0.135.3",
    "fastmcp[tasks]>=3.2.2",
    "huey>=2.6.0",
    "ipython>=9.10.1",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langchain-openrouter>=0.2.1",
    "langgraph>=1.1.6",
    "loguru>=0.7.3",
    "mcp-server-fetch>=2025.1.17",
    "mcp-server-git>=2026.1.14",
    "mcp-server-time>=2026.1.26",
    "mcp-url-downloader>=0.1.0",
    "pageindex>=0.2.8",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "starlette>=1.0.0",
    "uvicorn>=0.44.0",
]
